--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
     "@tensorflow-models/coco-ssd": "^2.2.3",
     "@tensorflow/tfjs": "^4.22.0",
     "@types/express": "^5.0.0",
+    "@types/react-leaflet": "^2.8.3",
     "@types/socket.io": "^3.0.1",
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "ethers": "^6.13.4",
     "express": "^4.21.2",
     "jspdf": "^2.5.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "peerjs": "^1.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "react-toastify": "^11.0.2",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
